fixed readability

--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,7 @@ button:hover {
 .container p {
   margin: 0;
 }
+
+.p {
+  margin-bottom: 10px;
+}
